botoncito de alerta

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
 
     <h1>Mi primer GIT</h1>
+
+    <p> Agrego este parrafo y botoncito en rama entorno_prueba </p>
+
+    <button onclick="saludo('Holi manniga')">Oprime!</button>
+
+    <script src="js/mi-script.js"></script>
     
 </body>
 </html>
